crates/solidity-v2/testing/snapshots/diagnostics_output/structure/interface_function_not_external/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 5

[SyntaxError 4937] Error: No visibility specified. Did you intend to add "external"?
    ╭─[input.sol:15:5]
    │
 15 │     function withDefault();
    │     ───────────┬───────────  
    │                ╰───────────── Error occurred here.
────╯

[TypeError 1560] Error: Functions in interfaces must be declared external.
   ╭─[input.sol:9:5]
   │
 9 │     function withPublic() public;
   │     ──────────────┬──────────────  
   │                   ╰──────────────── Error occurred here.
───╯

[TypeError 1560] Error: Functions in interfaces must be declared external.
    ╭─[input.sol:10:5]
    │
 10 │     function withInternal() internal;
    │     ────────────────┬────────────────  
    │                     ╰────────────────── Error occurred here.
────╯

[TypeError 1560] Error: Functions in interfaces must be declared external.
    ╭─[input.sol:11:5]
    │
 11 │     function withPrivate() private;
    │     ───────────────┬───────────────  
    │                    ╰───────────────── Error occurred here.
────╯

[TypeError 1560] Error: Functions in interfaces must be declared external.
    ╭─[input.sol:15:5]
    │
 15 │     function withDefault();
    │     ───────────┬───────────  
    │                ╰───────────── Error occurred here.
────╯
